ES工具类泛型化并支持多向量RRF混合搜索及重排增强